--- a/home.html
+++ b/home.html
@@ -14,9 +14,13 @@
 <!--Style for background-->
 <style>
   body {
-    background-image: url('/Users/user/Desktop/REFER-U/public/homepage/pictures/backpicture.png');
+    background-image: url('public/homepage/pictures/backpicture.png');
     opacity: 0.85;
 
+  }
+
+  #img-2 {
+    background-color: blueviolet;
   }
 </style>
 
@@ -28,7 +32,7 @@
 <body>
   <nav class="deep-purple darken-1" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo" class="white-text"><img class="left logo" src="/Users/user/Desktop/REFER-U/public/homepage/pictures/Logo.png"> </a>
+      <a id="logo-container" href="#" class="brand-logo" class="white-text"><img class="left logo" src="public/homepage/pictures/Logo.png"> </a>
       
       <ul class="right hide-on-med-and-down ">
         <li>
@@ -79,7 +83,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="/Users/user/Desktop/REFER-U/public/homepage/pictures/computer.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="public/homepage/pictures/computer.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 
@@ -128,7 +132,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="/Users/user/Desktop/REFER-U/public/homepage/pictures/people.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax" id="img-2"></div>
   </div>
 
   <div class="container">
