--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
       
       <ul class="right hide-on-med-and-down ">
         <li>
-          <a class="login" id="logOutLinkId" onclick="logout();">Log Out </a>
+          <a class="login" id="logOutLinkId" onclick="logout();">Log in</a>
         </li>
       </ul>
       <ul class="right hide-on-med-and-down">
@@ -146,7 +146,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax" id="img-2"><img src=""></div>
+    <div class="parallax" id="img-2"><img src="public/homepage/pictures/faces.png"></div>
   </div>
 
 <div class="container">
